# delatin-rs

./: Cargo.toml  LICENSE  README.md
conversion/: Cargo.toml
conversion/src/: main.rs
data/: input.json
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  priority_queue.rs  triangulation.rs  utils.rs
plot/: Cargo.toml
plot/src/: main.rs
test/: Cargo.toml
test/src/: main.rs
