[package]
name = "delatin"
version = "0.1.0"
edition = "2021"
description = "Fast TIN generation using Delaunay triangulation."
documentation = "https://docs.rs/delatin"
repository = "https://github.com/pokhanto/delatin-rs"
readme = "README.md"
license = "ISC"

[lib]
name = "delatin"

[profile.test]
inherits = "release"

[dependencies]
rustc-hash = "2.0.0"
